# blackjack-nn

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  blackjack.cpp  mat.cpp
src/include/: mat.h
tests/: CMakeLists.txt  test_blackjack.cpp  test_mat.cpp  test_nn.cpp
